--- a/Instructions_for_creating_сontour_map.ipynb
+++ b/Instructions_for_creating_сontour_map.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIJGMkuU8qvtTsUq+azD61",
+      "authorship_tag": "ABX9TyNJ1S9LhKhEvhpchPrqh1Aw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,6 +75,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "#### Інструкція"
+      ],
+      "metadata": {
+        "id": "Qjk4vFkejhfM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Приклад коду який витягуватиме дані всіх громад Київська області\n",
         "\n",
         "\n",
@@ -100,7 +109,7 @@
         "\n",
         "---\n",
         "\n",
-        "Третій рядок `(rel['admin_level'='7'](area);)` вказує що ми хочемо отримати, в даному випадку це `rel` (відносини), інші можливі ваіранти це `node` і `way`. Географічна інформація про широту/довжину завжди зберігається у вузлах. Області з понад 2000 вузлів не можуть бути представлені шляхом, ця функція вимагатиме складнішої багатополігональної структури відсини, тому в даному випадку використовується саме сутність rel (відносини).  <br> `'admin_level'='7'` вкзаує, що саме ми хочемо витягнути села, міста, райони, в даному випадку це громади.\n",
+        "Третій рядок `(rel['admin_level'='7'](area);)` вказує що ми хочемо отримати, в даному випадку це `rel` (відносини), інші можливі ваіранти це `node` і `way`. Географічна інформація про широту/довжину завжди зберігається у вузлах. Області з понад 2000 вузлів не можуть бути представлені шляхом, ця функція вимагатиме складнішої багатополігональної структури відсини, тому в даному випадку використовується саме сутність rel (відносини). Проте сутність відносини повертує також \"сусідів\" нашого шуканого запиту, про це детальніше в розділі \"випавлення помилок\" <br> `'admin_level'='7'` вкзаує, що саме ми хочемо витягнути села, міста, райони, в даному випадку це громади.\n",
         "\n",
         "---\n",
         "\n",
@@ -108,6 +117,15 @@
       ],
       "metadata": {
         "id": "G80d-cX-yGpX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Деякі приклади"
+      ],
+      "metadata": {
+        "id": "ITF-th8Wjjia"
       }
     },
     {
@@ -129,6 +147,18 @@
         "area['admin_level'='2']['name:uk'='Україна'];\n",
         "(rel['admin_level'='6'](area););\n",
         "out geom;\n",
+        "```\n",
+        "\n",
+        "Приклад коду який витягуватиме дані всіх районів України* (до реформи децентралізації)\n",
+        "Вказуючи дату ми отримуємо карту, яка існувала на момент зазначений в коді, майте на увазі це значно сповільнює виконання коду.\n",
+        "\n",
+        "```\n",
+        "[date:\"2014-01-01T19:00:00Z\"]\n",
+        "[out:json];\n",
+        "area['admin_level'='2']['name:uk'='Україна'];\n",
+        "(rel['admin_level'='6'](area););\n",
+        "out geom;\n",
+        "\n",
         "```\n",
         "\n",
         "Приклад коду який витягуватиме дані всіх громад України*\n",
@@ -162,17 +192,54 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Місто Київ не є громадою, проте якщо ми витягуватимео дані по всіх громадах Київської області, то на мапі України в нас буде пусте місце яке належитеме місту Києву. Отже припустимо ми бажаємо отримати всі громади Київської області і міста Київ.\n",
-        "Спочатку спробуємо отримати дані  Києва. Нижче наведений запит, який також поверне Київську область, оскільки admin_level для міста Києва і області одинаковий\n",
+        "#### Виправлення даних"
+      ],
+      "metadata": {
+        "id": "tFgi63w_jmv6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Для тестування використаємо функцію `[bbox]`, яка повертатиме дані лише в\n",
+        " виділеній області `[bbox:{{bbox}}]` або в зазначених координатах `[bbox:49.560852, 22.617202, 50.659908, 24.490371]`"
+      ],
+      "metadata": {
+        "id": "B5IyXVpRlMu_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####Помилка \"сусіди\"\n"
+      ],
+      "metadata": {
+        "id": "qodNYRSAk6Da"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
+        "Очікувано, що запит нижче поверне координати міста Києва, але він поверне також Київську область.\n",
         "```\n",
         "[out:json];\n",
         "area['admin_level'='4']['name:uk'='Київ'];\n",
         "(rel['admin_level'='4'](area););\n",
         "out geom;\n",
         "```\n",
+        "Проблема в тому, що запит повертатиме шляхи, які є частинами *relative* міста Київа, оскільки Київ межує з Київсьою областю (тобтот має спільні шляхи) і Київська область теж має `'admin_level'='4'`, тому ми отримуємо дві сутності Київ та Київська область.  Ця помилка може вирішитися специфікацією, що ми шукаємо саме місто `['place'='city']`, але не завжди ці сутності мають різний тип, наприклад в випадку прикордонних областей, ми отримаємо як і райони України так і райони інших країн, якщо  їх 'admin_level' співпадає, в такому випадку ми можемо вказати `[\"iso3166-2\"~\"^UA-\"]` де для позначення України використовується  *UA*\n",
         "\n",
-        "Тож варто вказати, що ми шукаємо саме місто  `['place'='city']`\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "IILMwtk8mRGa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Місто Київ не є громадою, проте якщо ми витягуватимео дані по всіх громадах Київської області, то на мапі України в нас буде пусте місце яке належитеме місту Києву. Отже припустимо ми бажаємо отримати всі громади Київської області і міста Київ. Оскільки admin_level для міста Києва і області одинаковий, то варто вказати, що ми шукаємо саме місто  `['place'='city']`\n",
         "\n",
         "```\n",
         "[out:json];\n",
@@ -205,11 +272,88 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Крим це Україна. Проте, на жаль, в Криму не відбулася реформат децентралізації, тому в ньому і немає районів з `admin_level'='7'` припустимо, що ми бажаємо отримати карту громад України і райони Криму до окупації. <br>\n",
+        "Запит для отримання громад повертає близько 70 мб, для тестування нашого коду обмежемо область лише видимою картою додавши `bbox:{{bbox}}`, також нас не цікавлять зміни адміністративних кордонів після окупації, тому задамо параметр   `[date:\"2014-01-01T19:00:00Z\"]`, який повертає стан мапи в зафіксовний період.\n",
+        "\n",
+        "```\n",
+        "[bbox:{{bbox}}]\n",
+        "[out:json];\n",
+        "area['admin_level'='2']['name:uk'='Україна'];\n",
+        "(rel['admin_level'='7'](area););\n",
+        "out geom;\n",
+        "```\n",
+        "\n",
+        "Оскільки\n"
+      ],
+      "metadata": {
+        "id": "gIKLeHOSPK_U"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "eLSrrQYTYKJk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "78lqGUEbYKGx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Для конвертації файлу з GeoJSON до TurboJson  можна використати будь який онлайн сай, наприклад:\n",
         "https://mapshaper.org/"
       ],
       "metadata": {
         "id": "XqJXKEf_FCzm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "/*[bbox:44.268805, 32.124023, 46.672056, 36.469116]\n",
+        "[out:json];\n",
+        "(rel['admin_level'='7'](area););\n",
+        "out geom;\n",
+        "area['admin_level'='4']['name:uk'='Автономна Республіка Крим'];\n",
+        "(rel['admin_level'='6'](area););\n",
+        "out geom;\n",
+        "area['admin_level'='4']['name:uk'='Севастополь'];\n",
+        "(rel['admin_level'='4'](area););\n",
+        "out geom;\n",
+        "\n",
+        "\n",
+        "[out:json];\n",
+        "area['admin_level'='4']['name:uk'='Автономна Республіка Крим'];\n",
+        "(rel['admin_level'='6'](area)(newer:\"2020-04-01T00:00:00Z\"););\n",
+        "out geom;\n",
+        "\n",
+        "\n",
+        "\n",
+        "[date:\"2013-01-01T19:00:00Z\"]\n",
+        "[out:json];\n",
+        "area['admin_level'='2']['name:uk'='Україна']->.country;\n",
+        "area['admin_level'='4']['name:uk'='Луганська область'](area.country)->.region;\n",
+        "(node['admin_level'='4'](area.region););\n",
+        "out geom ;\n",
+        "*/\n",
+        "\n",
+        "[out:json];\n",
+        "area['admin_level'='2']['name:uk'='Україна'];\n",
+        "(relation['admin_level'='6'](area););\n",
+        "out geom;\n"
+      ],
+      "metadata": {
+        "id": "85mwliZDl2U7"
       }
     }
   ]
