--- a/Instructions_for_creating_сontour_map.ipynb
+++ b/Instructions_for_creating_сontour_map.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJ1S9LhKhEvhpchPrqh1Aw",
+      "authorship_tag": "ABX9TyOG/Nkw7jaytCVUh8ivC5j0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -211,7 +211,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####Помилка \"сусіди\"\n"
+        "####Помилка \"сусіди\"\n",
+        "\n",
+        "(не закінчений розділ!!)\n",
+        "\n"
       ],
       "metadata": {
         "id": "qodNYRSAk6Da"
@@ -228,8 +231,7 @@
         "(rel['admin_level'='4'](area););\n",
         "out geom;\n",
         "```\n",
-        "Проблема в тому, що запит повертатиме шляхи, які є частинами *relative* міста Київа, оскільки Київ межує з Київсьою областю (тобтот має спільні шляхи) і Київська область теж має `'admin_level'='4'`, тому ми отримуємо дві сутності Київ та Київська область.  Ця помилка може вирішитися специфікацією, що ми шукаємо саме місто `['place'='city']`, але не завжди ці сутності мають різний тип, наприклад в випадку прикордонних областей, ми отримаємо як і райони України так і райони інших країн, якщо  їх 'admin_level' співпадає, в такому випадку ми можемо вказати `[\"iso3166-2\"~\"^UA-\"]` де для позначення України використовується  *UA*\n",
-        "\n",
+        "Проблема в тому, що запит повертатиме шляхи, які є частинами *relative* міста Київа, оскільки Київ межує з Київсьою областю (тобтот має спільні шляхи) і Київська область теж має `'admin_level'='4'`, тому ми отримуємо дві сутності Київ та Київська область.  Ця помилка може вирішитися специфікацією, що ми шукаємо саме місто, якщо ці сутності мають одинаковий тип, наприклад в випадку прикордонних областей, ми можемо відфільтрувати їх за іншим тегами, напрклад для області вказати `[\"iso3166-2\"~\"^UA-\"]` де для позначення України використовується  *UA* або для районі (до реформи централізації) `['wikipedia'~ '^uk']`\n",
         "\n"
       ],
       "metadata": {
@@ -290,6 +292,33 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Витяг даних"
+      ],
+      "metadata": {
+        "id": "qqwcYy-lz01P"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Якщо ми використовуємо Overpass turbo, то варто натиснути \"Експорт\" -> \"GeoJSON\""
+      ],
+      "metadata": {
+        "id": "Llg4MloS0INl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "IkMi5BL00Oe5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
@@ -297,6 +326,13 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "8Orlof4d0HBx"
+      }
     },
     {
       "cell_type": "code",
@@ -310,8 +346,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Для конвертації файлу з GeoJSON до TurboJson  можна використати будь який онлайн сай, наприклад:\n",
-        "https://mapshaper.org/"
+        "\n",
+        "1.   Пункт списку\n",
+        "2.   Пункт списку\n",
+        "\n"
       ],
       "metadata": {
         "id": "XqJXKEf_FCzm"
