--- a/GeoPandas.ipynb
+++ b/GeoPandas.ipynb
@@ -1519,7 +1519,7 @@
         "\n",
         "file_name='Topo_Ukraine_oblast.json'\n",
         "with open(file_name, 'w') as f:\n",
-        "    json.dump(topojson, f)\n"
+        "    json.dump(topojson, f, ensure_ascii=False)\n"
       ],
       "metadata": {
         "id": "_DB1j6zvyu_j"
