Update  text description GeoPandas.ipynb

--- a/GeoPandas.ipynb
+++ b/GeoPandas.ipynb
@@ -47,7 +47,7 @@
       "source": [
         "Перш ніж працювати з географічними даними їх потрібно десь знайти.  \n",
         "\n",
-        "Для адміністративних меж України існує чудовий сайт [https://decentralization.gov.ua/](https://decentralization.gov.ua/) і хоч зараз, здається, сайт має якісь проблеми, але, якщо постаратися, то він містить безліч корисної інформації особливо в розділі [Атлас](http://web.archive.org/web/20210815051818/https://atu.decentralization.gov.ua/), який зараз, на жаль, [не працює](https://atu.decentralization.gov.ua )\n",
+        "Для адміністративних меж України є сайт [https://decentralization.gov.ua/](https://decentralization.gov.ua/) і хоч зараз, здається, сайт має якісь проблеми, але, якщо постаратися, то він містить безліч корисної інформації особливо в розділі [Атлас](http://web.archive.org/web/20210815051818/https://atu.decentralization.gov.ua/), який зараз, на жаль, [не працює](https://atu.decentralization.gov.ua )\n",
         "\n",
         "Для більш специфічних запитів інформацію можна отримати з [Openstreetmap](https://github.com/JuliaKovalchook/Ukraine-TopoJSON/blob/6d623b1a1119870fd891a99e6c1e05fc1d523d70/Instructions%20Openstreetmap.md)\n"
       ],
