--- a/GeoPandas.ipynb
+++ b/GeoPandas.ipynb
@@ -49,7 +49,7 @@
         "\n",
         "Для адміністративних меж України є сайт [https://decentralization.gov.ua/](https://decentralization.gov.ua/) і хоч зараз, здається, сайт має якісь проблеми, але, якщо постаратися, то він містить безліч корисної інформації особливо в розділі [Атлас](http://web.archive.org/web/20210815051818/https://atu.decentralization.gov.ua/), який зараз, на жаль, [не працює](https://atu.decentralization.gov.ua )\n",
         "\n",
-        "Для більш специфічних запитів інформацію можна отримати з [Openstreetmap](https://github.com/JuliaKovalchook/Ukraine-TopoJSON/blob/main/Instructions%20Openstreetmap.md)\n"
+        "Для більш специфічних запитів інформацію можна отримати з [Openstreetmap](https://github.com/JuliaKovalchook/Ukraine-TopoJSON/blob/main/Openstreetmap.md)\n"
       ],
       "metadata": {
         "id": "4NGKup4ZbqoY"
